--- a/painogen/products/index.html
+++ b/painogen/products/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="../about/index.html">About  <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../products/index.html">Products</a>
+                    <a class="nav-link" href="#">Products</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../shop/index.html">Shop</a>
