--- a/painogen/index.html
+++ b/painogen/index.html
@@ -19,7 +19,7 @@
       <div class="container-fluid">
           <nav class="navbar navbar-expand-lg" id="headNav">
               <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo"width='179' height="54"></a>
-              <button id="nav-icon1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button id="nav-icon1" class="navbar-toggler nav-icon_1" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <!-- <span class="navbar-toggler-icon"></span>-->
                
                     <span></span>
