--- a/painogen/products/index.html
+++ b/painogen/products/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Product-Painogen</title>
+  <title>Home-Painogen</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/reset.css">
@@ -15,11 +15,11 @@
 </head>
 <body>
 
-    <header>
+    <header class="wow fadeInDownBig" data-wow-duration="1s" data-wow-delay="0s">
       <div class="container-fluid">
           <nav class="navbar navbar-expand-lg" id="headNav">
               <a class="navbar-brand" href="../index.html"><img src="img/logo.png" alt="logo"width='179' height="54"></a>
-              <button id="nav-icon1" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button id="nav-icon1" class="navbar-toggler nav-icon_1" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <!-- <span class="navbar-toggler-icon"></span>-->
                
                     <span></span>
@@ -145,6 +145,7 @@
             </div>
            
     </div>
+
 
 
 
