--- a/painogen/privat/index.html
+++ b/painogen/privat/index.html
@@ -370,7 +370,7 @@
 
     <div class="container" id="feature">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div id="feature_product" class="product_content">
                     <h2>Feature Products</h2>
                         <div class="img_product">
@@ -383,7 +383,7 @@
                         </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div id="relarid_products" class="product_content">
                     <h2>Relarid Products</h2>
                     <div class="img_product">
