--- a/painogen/privat/index.html
+++ b/painogen/privat/index.html
@@ -161,7 +161,7 @@
             
                                 <p>
                                     <span>
-                                    <span class="style_3 text_color_6">&#36;</span><span class="style_2 text_color_6">107</span></span>
+                                    <span class="style_3 text_color_6">&#36;</span><span class="style_2 text_color_6  text_decoration_line_through">107</span></span>
                                     <span class="spanPrice"><span class="style_3 text_color_3">&#36;</span>  <span class="style_2 text_color_3">89.99</span></span>
                                     <span class="style_1 text_color_6">loyalty points  <span>90</span>
                                 </span>
@@ -543,6 +543,14 @@
                   </div>
     </div>
 </div>
+
+
+
+
+
+
+
+
 
 
 
