--- a/newhomepage/newhomepage/index.html
+++ b/newhomepage/newhomepage/index.html
@@ -49,16 +49,16 @@
                                 <a href="#sc_our_team">Team</a>
                             </li>
                             <li>
-                                <a href="#sc_our_partners">Partners</a>
+                                <a href="#sc_our_partners">Contact Us</a>
                             </li>
                             <li>
                                 <a href="#sc_faq">Faq</a>
                             </li>
                         </ul>
-                        <a href="#" class="bc_default_btn">Contact Us</a>
+                        <a href="#" class="bc_default_btn">Login</a>
                     </nav>
                     <div class="right_box">
-                        <a href="#" class="bc_default_btn">Contact Us</a>
+                        <a href="#" class="bc_default_btn">Login</a>
                     </div>
                 </header>
                 <div class="token_start_box">
